# onnx-offloading-server

./: README.md  package.json
.github/workflows/: deploy-server.yml
cpp-server/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile
cpp-server/include/: npy_parser.hpp
cpp-server/scripts/: download_deps.ps1  download_deps.sh
cpp-server/src/: main.cpp
public/: index.html  test_split_preproc.json
public/preprocessed/: 09ab68a25b4d.npy  1010_left.npy  1012_right.npy  1054_left.npy  1065_right.npy  106_left.npy  106_right.npy  1089_left.npy  109.npy  1095.npy  10f2e6163087.npy  110.npy  1101_left.npy  1122_right.npy  1129_right.npy  1133_right.npy  114_right.npy  115_right.npy  1160_left.npy  1168_left.npy  1170.npy  12.npy  1210_right.npy  1216_left.npy  1217_right.npy  1222_right.npy  1227_left.npy  1241_right.npy  1246_right.npy  1251_left.npy  1270_right.npy  1287_left.npy  1291_left.npy  1301_left.npy  1306_left.npy  1319_right.npy  13345_left_eyepacs.npy  1344_left.npy  13489_right_eyepacs.npy  1353_right.npy  (+1246 more)
src/: FundusDemo.jsx  index.jsx
src/hooks/: useCppServerInference.js
src/styles/: style.css
